<resources>
    <string name="app_name">Ridr</string>
    <string name="title_activity_geo_view">Ridr Map</string>
    <string name="username_hint">Username</string>
    <string name="rider">Rider</string>
    <string name="log_in">Log In</string>
    <string name="driver">Driver</string>
    <string name="add_account_login">Add Account</string>

    <!-- add account view strings -->
    <string name="create_account_title">Create Rider:</string>
    <string name="create_account_button">Create</string>
    <string name="create_account_subtitle">This will create both a rider account for you to use.</string>
    <string name="username_add_account">Unique Username:</string>
    <string name="username_add_account_edit_text">Username</string>
    <string name="dob_add_account">Date Of Birth:</string>
    <string name="dob_add_account_edit_text">Format: YYYY/MM/DD</string>
    <string name="email_add_account">Email:</string>
    <string name="email_add_account_edit_text">john@example.com</string>
    <string name="phone_add_account">Phone Number:</string>
    <string name="phone_add_account_edit_text">(123) 456-7890 or 1 123-456-7890</string>
    <string name="credit_add_account">Credit Card Number:</string>
    <string name="credit_add_account_edit_text">Example: XXXXBBBBYYYYAAAA</string>
    <string name="title_activity_add_driver_view">AddDriverView</string>
    <string name="vehicle_description">Vehicle description...</string>
    <string name="vehicle">Vehicle:</string>
    <string name="enter_username">Enter username...</string>
    <string name="create_driver_button">Create</string>
    <string name="driver_dob_hint">Enter date of birth...</string>
    <string name="create_driver_text">Create Driver:</string>
    <string name="title_activity_driver_ride_view">Rides</string>
    <string name="title_activity_ride_view">RideView</string>
    <string name="cancel_request_text">Cancel Request</string>
    <string name="exit_canceling_request">Exit</string>
    <string name="cancel">Cancel Request</string>

    <!-- accept_rider view strings -->
    <string name="payment_accept_rider">Payment:  </string>
    <string name="contact_info_accept_rider">Contact Info:  </string>
    <string name="pickup_time_accept_rider">Time of Pickup:  </string>
    <string name="start_location_accept_rider">Pickup:  </string>
    <string name="end_location_accept_rider">Dropoff:  </string>
    <string name="status_accept_rider">Status:  </string>
    <string name="accept_rider_button">Accept This Request</string>
    <string name="view_request_info_button">View Request Info</string>
    <string name="complete_ride">Complete</string>
    <string name="view_ride_info">View Ride Info</string>
    <string name="title_activity_rider_rides_view">RiderRidesView</string>

</resources>
