<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/add_user"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ca.ualberta.ridr.AddUserView"
    android:animationCache="true"
    android:background="@color/secondary_colour">

    <TextView
        android:text="@string/create_account_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/create_account_title_text"
        android:textSize="40sp"
        android:textStyle="normal|bold"
        android:fontFamily="sans-serif"
        android:typeface="normal"
        android:textColor="@color/primary_colour" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/username_add_account_edit_text"
        android:background="@color/primary_colour"
        android:layout_below="@+id/username_add_account_text"
        android:layout_marginBottom="10dp"
        android:textColor="?android:attr/colorPrimary"
        android:textSize="18sp"
        android:layout_alignStart="@+id/create_account_subtitle_text"
        android:layout_alignEnd="@+id/create_account_subtitle_text"
        android:gravity="center_vertical|center_horizontal"
        android:hint="@string/username_add_account_edit_text"
        android:textColorHint="@android:color/darker_gray" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/dob_add_account_edit_text"
        android:background="@color/primary_colour"
        android:layout_below="@+id/dob_add_account_text"
        android:layout_alignStart="@+id/username_add_account_edit_text"
        android:layout_marginBottom="10dp"
        android:textColor="?android:attr/colorPrimary"
        android:layout_alignEnd="@+id/username_add_account_edit_text"
        android:gravity="center_vertical|center_horizontal"
        android:hint="@string/dob_add_account_edit_text"
        android:textColorHint="@android:color/darker_gray"/>


    <TextView
        android:text="@string/dob_add_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dob_add_account_text"
        android:textStyle="normal|bold"
        android:textSize="18sp"
        android:textColor="@color/primary_colour"
        android:layout_below="@+id/username_add_account_edit_text"
        android:layout_centerHorizontal="true"
        android:paddingBottom="5dp" />

    <TextView
        android:text="@string/email_add_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/email_add_account_text"
        android:textStyle="normal|bold"
        android:textSize="18sp"
        android:textColor="@color/primary_colour"
        android:paddingBottom="5dp"
        android:layout_below="@+id/dob_add_account_edit_text"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/email_add_account_edit_text"
        android:background="@color/primary_colour"
        android:layout_below="@+id/email_add_account_text"
        android:layout_alignStart="@+id/dob_add_account_edit_text"
        android:layout_marginBottom="10dp"
        android:textColor="?android:attr/colorPrimary"
        android:layout_alignEnd="@+id/username_add_account_edit_text"
        android:gravity="center_vertical|center_horizontal"
        android:hint="@string/email_add_account_edit_text"
        android:textColorHint="@android:color/darker_gray"/>


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/phone_add_account_edit_text"
        android:background="@color/primary_colour"
        android:layout_below="@+id/phone_add_account_text"
        android:layout_alignStart="@+id/email_add_account_edit_text"
        android:layout_marginBottom="10dp"
        android:inputType="phone"
        android:textColor="?android:attr/colorPrimary"
        android:layout_alignEnd="@+id/username_add_account_edit_text"
        android:gravity="center_vertical|center_horizontal"
        android:hint="@string/phone_add_account_edit_text"
        android:textColorHint="@android:color/darker_gray"/>


    <TextView
        android:text="@string/phone_add_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/phone_add_account_text"
        android:textStyle="normal|bold"
        android:textSize="18sp"
        android:textColor="@color/primary_colour"
        android:paddingBottom="5dp"
        android:layout_below="@+id/email_add_account_edit_text"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/credit_add_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/credit_add_account_text"
        android:textStyle="normal|bold"
        android:textSize="18sp"
        android:textColor="@color/primary_colour"
        android:paddingBottom="5dp"
        android:layout_below="@+id/phone_add_account_edit_text"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/create_account_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/create_account_button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:textSize="14sp"
        android:layout_below="@+id/credit_add_account_edit_text"
        android:layout_marginTop="40dp" />


    <TextView
        android:text="@string/create_account_subtitle"
        android:layout_height="wrap_content"
        android:layout_below="@+id/create_account_title_text"
        android:id="@+id/create_account_subtitle_text"
        android:layout_marginBottom="30dp"
        android:layout_width="wrap_content"
        android:layout_alignStart="@+id/create_account_title_text"
        android:layout_alignEnd="@+id/create_account_title_text"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textAlignment="center"
        android:layout_centerHorizontal="false"
        android:autoText="false"
        android:gravity="center" />

    <TextView
        android:text="@string/username_add_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/username_add_account_text"
        android:textStyle="normal|bold"
        android:textColor="@color/primary_colour"
        android:paddingBottom="5dp"
        android:textSize="18sp"
        android:layout_below="@+id/create_account_subtitle_text"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/credit_add_account_edit_text"
        android:background="@color/primary_colour"
        android:inputType="number"
        android:textColor="?android:attr/colorPrimary"
        android:layout_below="@+id/credit_add_account_text"
        android:layout_alignStart="@+id/phone_add_account_edit_text"
        android:layout_alignEnd="@+id/phone_add_account_edit_text"
        android:gravity="center_vertical|center_horizontal"
        android:hint="@string/credit_add_account_edit_text"
        android:textColorHint="@android:color/darker_gray"/>
</RelativeLayout>
