<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/add_user"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="ca.ualberta.ridr.AddDriverView"
    android:animationCache="true"
    android:scrollbars="vertical"
    android:background="@color/secondary_colour">


    <TextView
        android:text="@string/create_driver_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/create_account_title_text"
        android:textSize="38sp"
        android:textStyle="normal"
        android:fontFamily="sans-serif"
        android:layout_marginLeft="10dp"
        android:typeface="normal"
        android:textColor="@color/primary_colour" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/username_add_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/username_add_account_text"
                android:textStyle="normal"
                android:textColor="@color/primary_colour"
                android:layout_marginLeft="10dp"
                android:paddingBottom="5dp"
                android:textSize="20sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:textColor="@color/black"
                android:id="@+id/driver_username"
                android:background="@color/primary_colour"
                android:textSize="22sp"
                android:paddingTop="10sp"
                android:paddingBottom="5sp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:paddingStart="8dp"
                android:hint="@string/enter_username"
                android:textColorHint="@android:color/darker_gray" />

            <TextView
                android:text="@string/dob_add_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/dob_add_account_text"
                android:textStyle="normal"
                android:textSize="20sp"
                android:textColor="@color/primary_colour"
                android:layout_marginLeft="10dp"
                android:paddingBottom="5dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:ems="10"
                android:id="@+id/dob_add_account_edit_text"
                android:background="@color/primary_colour"
                android:textColor="@color/black"
                android:focusable="false"
                android:paddingStart="8dp"
                android:textSize="22sp"
                android:paddingTop="10sp"
                android:paddingBottom="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/driver_dob_hint"
                android:textColorHint="@android:color/darker_gray"/>

            <TextView
                android:text="@string/email_add_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/email_add_account_text"
                android:textStyle="normal"
                android:textSize="20sp"
                android:textColor="@color/primary_colour"
                android:layout_marginLeft="10dp"
                android:paddingBottom="5dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/driver_email"
                android:background="@color/primary_colour"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:paddingStart="8dp"
                android:paddingTop="10sp"
                android:paddingBottom="5sp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/email_add_account_edit_text"
                android:textColorHint="@android:color/darker_gray"/>

            <TextView
                android:text="@string/phone_add_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/phone_add_account_text"
                android:textStyle="normal"
                android:textSize="20sp"
                android:textColor="@color/primary_colour"
                android:layout_marginLeft="10dp"
                android:paddingBottom="5dp" />


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/driver_phone_number"
                android:background="@color/primary_colour"
                android:inputType="phone"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:paddingTop="10sp"
                android:paddingStart="8dp"
                android:paddingBottom="5sp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/phone_add_account_edit_text"
                android:textColorHint="@android:color/darker_gray"/>


            <TextView
                android:text="@string/credit_add_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/credit_add_account_text"
                android:textStyle="normal"
                android:textSize="20sp"
                android:textColor="@color/primary_colour"
                android:layout_marginLeft="10dp"
                android:paddingBottom="5dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/driver_credit_card"
                android:background="@color/primary_colour"
                android:inputType="number"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:paddingTop="10sp"
                android:paddingStart="8dp"
                android:paddingBottom="5sp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/credit_add_account_edit_text"
                android:textColorHint="@android:color/darker_gray"/>

            <TextView
                android:text="@string/vehicle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/vehicle_text_view"
                android:textStyle="normal"
                android:textSize="20sp"
                android:textColor="@color/primary_colour"
                android:layout_marginLeft="10dp"
                android:paddingBottom="5dp" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/driver_add_vehicle"
                android:background="@color/primary_colour"
                android:inputType="textNoSuggestions"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:paddingTop="10sp"
                android:paddingStart="8dp"
                android:paddingBottom="5sp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp"
                android:hint="@string/vehicle_description"
                android:textColorHint="@android:color/darker_gray"/>
            <Button
                android:text="@string/create_driver_button"
                android:layout_height="65dp"
                android:id="@+id/create_driver_button"
                android:layout_width="300dp"
                android:layout_gravity="center"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_marginTop="10dp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>
