<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
<<<<<<< HEAD
    tools:context="ca.ualberta.ridr.AcceptRiderView"
    android:weightSum="1">

=======
    tools:context="ca.ualberta.ridr.RideView"
    android:weightSum="1">
>>>>>>> FETCH_HEAD
    <fragment
        xmlns:map="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/map"
        map:mapType="normal"
        map:uiCompass="true"
        map:uiZoomControls="false"
<<<<<<< HEAD
        tools:context="ca.ualberta.ridr.RiderMainView"
        class="com.google.android.gms.maps.SupportMapFragment"
        >

    <Button
        android:background="@color/tertiary_colour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/accept_rider_button"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/accept_rider_button" />
=======
        map:uiRotateGestures="false"
        map:uiScrollGestures="false"
        map:uiTiltGestures="false"
        map:uiZoomGestures="false"
        tools:context="ca.ualberta.ridr.RideView"
        android:name="com.google.android.gms.maps.SupportMapFragment">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:id="@+id/accept_rider_button"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="10dp"
        android:paddingLeft="75dp"
        android:paddingRight="75dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/view_ride_info" />
>>>>>>> FETCH_HEAD
    />
    </fragment>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
<<<<<<< HEAD
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:background="@color/secondary_colour"
        android:layout_marginBottom="200dp"
        android:layout_centerInParent="true"
        android:id="@+id/rideInfo"
        android:layout_alignParentBottom="true"
        android:visibility="invisible">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="Driven"
            android:id="@+id/textView"
            android:textColor="@color/primary_colour" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Item2"
            android:textColor="@color/primary_colour" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Item3"
            android:textColor="@color/primary_colour" />


=======
        android:layout_width="match_parent"
        android:id="@+id/rideInfo"
        android:visibility="invisible"
        android:background="@color/secondary_colour"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rideCompleted"
            android:textColor="@color/primary_colour"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textSize="21sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:id="@+id/riderName"
            android:textSize="20sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:id="@+id/ridePickup"
            android:textSize="20sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:id="@+id/ridePickupTime"
            android:textSize="20sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:id="@+id/rideDropoff"
            android:textSize="20sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:id="@+id/rideFare"
            android:textSize="20sp"
            android:layout_marginBottom="9dp"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="-6dp"
            android:layout_marginStart="-16dp"
            android:layout_marginEnd="-16dp"
            android:layout_gravity="bottom"
            android:id="@+id/completeRideButton"
            android:text="@string/complete_ride"/>
>>>>>>> FETCH_HEAD
    </LinearLayout>
</RelativeLayout>